language/move-lang/tests/move_check/translated_ir_tests/move/commands/else_moves_if_doesnt.exp
error[E06002]: use of unassigned variable
  ┌─ tests/move_check/translated_ir_tests/move/commands/else_moves_if_doesnt.move:5:12
  │
4 │     let y = if (true) 0 else move x; y;
  │                              ------ The variable might not have a value due to this position. The variable must be assigned a value before being used
5 │     assert(x == 0, 42);
  │            ^ Invalid usage of variable 'x'

